[gd_scene load_steps=4 format=3 uid="uid://71fhltlkcdhw"]

[ext_resource type="Script" path="res://scenes/main_screen/Menu.gd" id="1_dux04"]
[ext_resource type="FontFile" uid="uid://butu340vydyre" path="res://Assets/Fonts/MainScreen/ChakraPetch-Bold.ttf" id="2_niplv"]
[ext_resource type="PackedScene" uid="uid://b572t6ca2rq6g" path="res://scenes/main_screen/OptionsScreen.tscn" id="3_ko21w"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dux04")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -272.5
offset_right = 350.0
offset_bottom = 272.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="LoadGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../Credits")
theme_override_fonts/font = ExtResource("2_niplv")
theme_override_font_sizes/font_size = 50
text = "Load Game"

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_niplv")
theme_override_font_sizes/font_size = 50
text = "New Game"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_niplv")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_niplv")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Credits" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -74.0
offset_right = 180.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
focus_neighbor_bottom = NodePath("../VBoxContainer/LoadGame")
theme_override_fonts/font = ExtResource("2_niplv")
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="OptionsScreen" parent="." instance=ExtResource("3_ko21w")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
